[package]
name = "rsbloom"
version = "0.1.0"
authors = ["Aleksandr Bezobchuk <aleks.bezobchuk@gmail.com>"]
description = "A simple bloom filter implementation in Rust"
homepage = "https://github.com/alexanderbez/rust-bloom"
documentation = "https://docs.rs/rsbloom/"
edition = "2018"
readme = "README.md"
keywords = ["bloom", "filter", "bloomfilter", "bloomfilters"]
license = "MIT"

[badges]
travis-ci = { repository = "alexanderbez/rust-bloom" }
maintenance = { status = "passively-maintained" }

[lib]
name = "rsbloom"

[dependencies]
bit-vec = "0.5.0"
fasthash = "0.3"
rand = "0.6.1"

[dev-dependencies]
criterion = "0.2.6"

[[bench]]
name = "bench_main"
harness = false
